--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,8 +1,8 @@
 .card-container {
   display: flex;
   flex-direction: column;
-  background-color: #95dada;
-  border: 1px solid grey;
+  background-color: none;
+  border: 3px solid #10fe4c;
   border-radius: 5px;
   padding: 25px;
   cursor: pointer;
@@ -10,6 +10,7 @@
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
+  color: #10fe4c;
 }
 
 .card-container:hover {
